--- a/mybatis-xml/src/main/resources/jdbc.properties
+++ b/mybatis-xml/src/main/resources/jdbc.properties
@@ -1,4 +1,5 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/db_python?useUnicode=true&characterEncoding=utf8&useSSL=false&autoReconnect=true
+jdbc.url=jdbc:mysql://localhost:3306/db_spider?useUnicode=true&characterEncoding=utf8\
+  &useSSL=false&autoReconnect=true&allowMultiQueries=true
 jdbc.username=root
 jdbc.password=root
